--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,7 @@
 {
     "files.associations": {
-        "windows.h": "c"
+        "windows.h": "c",
+        "apppim2": "cpp"
     },
     "git.ignoreLimitWarning": true
 }
